--- a/index.qmd
+++ b/index.qmd
@@ -174,6 +174,8 @@ This will be animated by year.
 2. Create a map with `px.choropleth` and use `animation_frame` to show changes over time.
 
 ```{python}
+# | error: false
+# | warning: false
 # Convert country names to ISO3 codes
 emissions_long_1990_2022["country_code"] = coco.convert(
     emissions_long_1990_2022["country"], to="ISO3"
